# snake-pipe-rust

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  PUBLISHING.md  README.md  RECORDING_NOTES.md  build.rs  justfile  package-lock.json  package.json
.github/workflows/: cross-compile-macos.yml  cross-compile.yml  rust.yml  update-homebrew-tap.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs  render.rs  stream.rs  throttle.rs
crates/common/src/gamestate/: game.rs  mod.rs  physics.rs  snake.rs
debug/snakepipe-node/: validate-basic.js
node-helpers/: dev-server-sse.ts  package.json  tsconfig.json
node-helpers/dev-server-sse/: index.ts  server.ts
scripts/: test-zsh-completions
src/: cli.rs  common.rs  input.rs  lib.rs  main.rs  pipeline.rs  render.rs  stream.rs  throttle.rs  utils.rs
src/gamestate/: game.rs  mod.rs  snake.rs
src/net/: common.rs  mod.rs  play.rs  tcp_play.rs  watch.rs
src/render_browser/: common.rs  mod.rs  render.rs  server.rs
src/stream_sse/: mod.rs  net.rs  stream.rs
static/: common.js  index.html  main.css  main.js  render.js  types.d.ts
static/libs/: qrcode-display.js
static/renderers/: basic.js  inspect.js  log.js  utils.js
