[package]
name = "snakepipe"
version = "1.1.0"
edition = "2021"
repository = "https://github.com/topheman/snake-pipe-rust"
authors = ["Christophe Rosset"]
keywords = ["cli", "game", "snake", "unix", "pipe"]
description = "A snake game based on stdin/stdout following unix philosophy"
license = "MIT"
build = "build.rs"

[[bin]]
name = "snakepipe"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
clap = { version = "4.0", features = ["derive", "cargo"] }
crossterm = "0.27.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
array2d = "0.3.0"
ctrlc = "3.4.2"
indexmap = "2.2.3"
actix-web = "4.5.1"
actix-web-static-files = "4.0.1"
static-files = "0.2.3"

[build-dependencies]
static-files = "0.2.3"
