[package]
name = "snakepipe"
version = "2.1.0"
edition = "2021"
repository = "https://github.com/topheman/snake-pipe-rust"
authors = ["Christophe Rosset"]
keywords = ["cli", "game", "snake", "unix", "pipe"]
description = "A snake game based on stdin/stdout following unix philosophy"
license = "MIT"
build = "build.rs"

[[bin]]
name = "snakepipe"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
clap = { version = "4.0", features = ["derive", "cargo"] }
crossterm = "0.27.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
array2d = "0.3.0"
ctrlc = "3.4.2"
indexmap = "2.2.3"
# Must opt out of compress-zstd, because it will fail cross compilation
# list of actix-web features: https://docs.rs/actix-web/latest/actix_web/#crate-features
actix-web = { version = "4.5.1", default-features = false, features = [
  "macros",
  "compress-gzip",
] }
actix-web-static-files = "4.0.1"
static-files = "0.2.3"
futures-util = "0.3.30"
parking_lot = "0.12.1"
tokio = { version = "1.36.0", features = ["full"] }
tokio-stream = "0.1.14"
actix-web-lab = "0.20.2"
reqwest-eventsource = "0.5.0"
reqwest = { version = "0.11.24", features = ["json"] }
owo-colors = "4.0.0"
local-ip-address = "0.6.1"
exitcode = "1.1.2"
clap_complete = "4.5.1"

[build-dependencies]
static-files = "0.2.3"
